--- a/01_Variables_data_types/09_Challenge/index.html
+++ b/01_Variables_data_types/09_Challenge/index.html
@@ -3,10 +3,10 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Working with String</title>
+   <title>Challenge</title>
 </head>
 <body>
-   <h1>Working with String</h1>
+   <h1>Challenge</h1>
    <script src="script.js"></script>
 </body>
 </html>
